test/data/valid-messages/dict-simple.message
# A simple dict

VALID_HEADER
FIELD_NAME name
TYPE STRING
STRING 'org.freedesktop.Foo'
END_LENGTH Header
ALIGN 8
START_LENGTH Body
TYPE DICT
LENGTH Dict
START_LENGTH Dict
STRING 'int32'
TYPE INT32
INT32 0x12345678
END_LENGTH Dict
END_LENGTH Body
