test/data/invalid-messages/too-short-dict.message
# Message with lots of different argument types

VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

ALIGN 8

END_LENGTH Header

START_LENGTH Body
TYPE DICT
LENGTH Dict
START_LENGTH Dict
STRING 'uint32'
TYPE UINT32
UINT32 0x8765432
STRING 'uint32'
END_LENGTH Dict
END_LENGTH Body
